<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MoToDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Family Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="todo">TODO</string>
    <string name="mic_image" />
    <string name="due_date" />
    <string name="date_not_set" />
    <string name="click_to_set_date" />
    <string name="cancel_date" />
    <string name="time_not_set" />
    <string name="click_to_set_time" />
    <string name="cancel_time" />
    <string name="enter_priority">Enter priority</string>
    <string name="priority_prompt">Priority</string>
    <string name="task_to_be_done" />
    <string name="enter_task_here" />
    <string name="hint_username">User Name</string>
    <string name="title">Title</string>
    <string name="hh_mm_dd_mm_yyyy">hh:mm dd/MM/yyyy</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="due_time">Due-time</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="description" tools:ignore="ExtraTranslation">Description</string>


</resources>
