<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activity.WelcomeActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="423dp"
            android:layout_height="441dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="false"
            android:background="@drawable/logo"
            android:contentDescription="@string/todo"
            android:cropToPadding="false"
            android:src="@drawable/logo"
            tools:layout_editor_absoluteX="-8dp"
            tools:layout_editor_absoluteY="-3dp" />


    <Button
        android:id="@+id/appCompatButtonLogin1"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorTextHint"
        android:clickable="true"
        android:text="@string/text_login"
        android:textColor="@color/textColor1"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButtonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints"
        android:focusable="true" />

    <Button
        android:id="@+id/appCompatButtonRegister1"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="51dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_register"
        android:textColor="@color/textColor1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButtonLogin"
        tools:ignore="MissingConstraints" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
